--- a/fs/cifs/CHANGES
+++ b/fs/cifs/CHANGES
@@ -1,3 +1,8 @@
+Version 0.81
+------------
+Finish up CIFS packet digital signing for the default
+NTLM security case. 
+
 Version 0.80
 -----------
 Fix oops on stopping oplock thread when removing cifs when
