fix cifs distributed caching - send oplock release immediately after flush of writebehind data on oplock break from server

--- a/fs/cifs/CHANGES
+++ b/fs/cifs/CHANGES
@@ -1,3 +1,9 @@
+Version 0.82
+------------
+Add support for mknod of block or character devices.  Fix oplock
+code (distributed caching) to properly send response to oplock
+break from server.
+
 Version 0.81
 ------------
 Finish up CIFS packet digital signing for the default
