--- a/Documentation/Changes
+++ b/Documentation/Changes
@@ -61,7 +61,7 @@ o  pcmcia-cs              3.1.21                  # cardmgr -V
 o  quota-tools            3.09                    # quota -V
 o  PPP                    2.4.0                   # pppd --version
 o  isdn4k-utils           3.1pre1                 # isdnctrl 2>&1|grep version
-o  nfs-utils              1.0.4                   # showmount --version
+o  nfs-utils              1.0.5                   # showmount --version
 o  procps                 2.0.9                   # ps --version
 o  oprofile               0.5.3                   # oprofiled --version
 
@@ -413,7 +413,12 @@ o  <ftp://ftp.inr.ac.ru/ip-routing/iproute2-2.2.4-now-ss991023.tar.gz>
 OProfile
 --------
 o  <http://oprofile.sf.net/download/>
- 
+
+NFS-Utils
+---------
+o  <http://nfs.sourceforge.net/>
+
+
 Suggestions and corrections
 ===========================
 
