Fix blocksize and allocation size miscalculation

--- a/fs/cifs/CHANGES
+++ b/fs/cifs/CHANGES
@@ -1,6 +1,13 @@
+Version 0.87
+------------
+Fix oops on big endian readdir.  Set blksize to be even power of two (2**blkbits) to fix
+allocation size miscalculation. After oplock token lost do not read through
+cache. 
+
 Version 0.86
 ------------
 Fix oops on empty file readahead.  Fix for file size handling for locally cached files.
+
 Version 0.85
 ------------
 Fix oops in mkdir when server fails to return inode info. Fix oops in reopen_files
