--- a/fs/cifs/AUTHORS
+++ b/fs/cifs/AUTHORS
@@ -19,10 +19,11 @@ Patch Contributors
 ------------------
 Zwane Mwaikambo
 Andi Kleen
+Amrut Joshi
 
 Test case and Bug Report contributors
 -------------------------------------
 Thanks to those in the community who have submitted detailed bug reports
 and debug of problems they have found:  Jochen Dolze, David Blaine,
-Rene Scharfe, Martin Josefsson and others. 
+Rene Scharfe, Martin Josefsson, Alexander Wild and others. 
 
