--- a/fs/cifs/CHANGES
+++ b/fs/cifs/CHANGES
@@ -1,6 +1,7 @@
 Version 0.91
 ------------
-Fix oops in reopen_files when invalid dentry. 
+Fix oops in reopen_files when invalid dentry. drop dentry on server rename. 
+Fix cases where pid is now tgid 
 
 Version 0.90
 ------------
